# lpmd

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  LLM_GUIDE.md  LPMD_README.md  MANIFEST.in  MULTI_LANGUAGE_DOCS.md  PUBLISHING.md  README.md  RUNNER_SERVICE.md  docker-compose.yml  index.html  pyproject.toml  requirements.txt  run_lpmd.sh  setup.py  test_import.py
.github/workflows/: build.yml  publish.yml
docs/: SYNTAX_GUIDE.md  literate_python.md  literate_quarto.qmd
examples/: interactive_audio_demo.md  test_simple.md
js/: LitPro.js  README.md
julia/: LitPro.jl  Project.toml  README.md  example.lit
rust/: LitPro.rs  README.md
src/core/: litpro_cli.py  lpmd_audio_features.py  lpmd_executor.py  lpmd_html_generator.py  multiband_compressor.py
src/utils/: demo.py  fft_demo.py  run_literate.py  run_readme.py  simple_test.py  view_markdown_demo.py
src/web/: lpmd_runner.py  lpmd_standalone_html.py  lpmd_web_server.py
